--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -3,12 +3,11 @@
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <content><Title text="Produkte"/>
- 
                 <List items="{products>/Produkte}">
  
-                    <StandardListItem title="Produktname: {products>Prodname}" info="ID: {products>Prodid}"/>
+                    <StandardListItem title="{products>Prodname}" info="ID: {products>Prodid}"/>
  
                 </List>
-                </content>
+        </content>
     </Page>
 </mvc:View>
